--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ custom styles adapted from Twenty by HTML5 Up
 **********************************************/
 
 @import url("font-awesome.min.css");
+@import url("academicons.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
 
 /* Basic */
