--- a/_layouts/hello-default.html
+++ b/_layouts/hello-default.html
@@ -94,7 +94,6 @@
         <div class="inner">
 
             <h2 style="font-size:3em; text-transform:none">{{ page.banner_title }}</h2>
-            <p style="text-transform:none;">{{ page.banner_subtitle }}</p>
       
         </div>
 
@@ -134,6 +133,7 @@
                   <h2><strong>{{ page.portfolio }}</strong></h2>
                 </header>
                 <p>{{ page.portfolio_description }}</p>
+		    <div style="text-align:left"> </p>
                 {% for categories in site.data[page.portfolio][page.portfolio] %}
                 <div class="row">
 
@@ -141,17 +141,28 @@
                               <h3 style="margin-bottom:2em; font-size:1.25em"><strong>{{ categories.category}}</strong></h3>
                           </div>
 
-                          {% for items in categories.items %}
-                          <div class="6u item">
+			{% for blogs in categories.blogs %}
+                          <div class="6u blog">
                             <section>
                               <div class="image featured">
-                                  <img src="{{ items.image }}" alt="" />
+                                  <img src="{{ blogs.image }}" alt="" />
+				   <div style="text-align:left"> 
                               </div>
-
-                              {% include {{ items.item }} %}
+				    {% include {{ blogs.blog }} %}
                             </section>
                           </div>
                           {% endfor %}
+                         {% for items in categories.items %}
+                          <div class="12u item">
+				<div style="text-align:left">
+                            <section>
+                              {% include {{ items.item }} %}	    
+                              <div class="image featured">
+                                  <img src="{{ items.image }}" alt="" />
+                              </div>
+                            </section>
+                          </div>
+                         {% endfor %}
                 </div>
 
                 {% endfor %}
@@ -187,7 +198,7 @@
 
     <!-- Footer -->
     <footer id="footer">
-
+	    
         <ul class="icons">
             {% if page.twitter_username %}
             <li><a href="https://twitter.com/{{ page.twitter_username }}" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
