--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -1,13 +1,13 @@
 <p><strong>Forsdick NJ</strong>, Magid M, Rayne A, Steeves TE. 2022. Navigating the shifting landscape of genetics/genomics research to support conservation management in Aotearoa New Zealand. New Zealand Ecological Society <em>Hot Topic</em> report. <a href="https://newzealandecology.org/navigating-shifting-landscape-geneticsgenomics-research-support-conservation-management-aotearoa-new">[LINK]</a></p>
 
-<p><strong>Forsdick, NJ. Reducing the mismatches between conservation research and practice. 2021. In <em>Pūtaiao - Manaaki Whenua science summary</em>, Vol. 6, pp. 18. Lincoln, NZ: Manaaki Whenua. <a href="https://www.landcareresearch.co.nz/news/reducing-the-mismatches-between-conservation-research-and-practice/">[LINK]</a></p> 
+<p><strong>Forsdick, NJ</strong>. Reducing the mismatches between conservation research and practice. 2021. <em>Pūtaiao - Manaaki Whenua science summary</em>, Vol. 6, pp. 18. Lincoln, NZ: Manaaki Whenua. <a href="https://www.landcareresearch.co.nz/news/reducing-the-mismatches-between-conservation-research-and-practice/">[LINK]</a></p> 
 
 <p>Galla SJ, <strong>Forsdick NJ</strong>. 2018. Novel science communication sees Bird of the Year take on Tinder. <em>Sciblogs</em>. <a href="https://sciblogs.co.nz/guestwork/2018/10/10/novel-science-communication-sees-bird-of-the-year-take-on-tinder/">[LINK]</a></p>
 
-<p>Poster: My year with Orbell - From monstrosity to science communication queen. Poster presented at the Birds NZ 2019 conference and 2019 International Congress for Conservation Biology, Kuala Lumpur, Malaysia. <a href="https://www.researchgate.net/publication/342927267_My_year_with_Orbell_From_monstrosity_to_science_communication_queen">[LINK]</a></p>
+<p>My year with Orbell - From monstrosity to science communication queen. Poster presented at the Birds NZ 2019 conference and 2019 International Congress for Conservation Biology, Kuala Lumpur, Malaysia. <a href="https://www.researchgate.net/publication/342927267_My_year_with_Orbell_From_monstrosity_to_science_communication_queen">[LINK]</a></p>
 
-<p>Chatham Island Black Robin. Women Birders (Happy Hour) podcast interview with Hannah Buschert, 2021. <a href="https://podcasts.apple.com/us/podcast/women-birders-happy-hour/id1513251211?i=1000529668325">[LINK]</a></p>
+<p>Chatham Island Black Robin. <em>Women Birders (Happy Hour)</em> podcast interview with Hannah Buschert, 2021. <a href="https://podcasts.apple.com/us/podcast/women-birders-happy-hour/id1513251211?i=1000529668325">[LINK]</a></p>
 
-<p>Wading into conservation genomics for kakī. British Ornithological Union 2017 Twitter Conference (\#BOU17TC) presentation. <a href="https://twitter.com/NatForsdick/status/935720171817316352?s=20">[LINK]</a></p>
+<p>Wading into conservation genomics for kakī. British Ornithological Union 2017 Twitter Conference (#BOU17TC) presentation. <a href="https://twitter.com/NatForsdick/status/935720171817316352?s=20">[LINK]</a></p>
 
 <p>Avian promiscuity. Otago Access Radio <em>Science Notes</em> interview. <a href="https://sciencenotesotago.wordpress.com/2017/08/18/avian-promiscuity/">[LINK]</a></p>
