--- a/_includes/published.html
+++ b/_includes/published.html
@@ -1,25 +1,13 @@
 <p><strong>Forsdick NJ</strong>, Adams CIM, Alexander A, Clark AC, Collier-Robinson L, Cubrinovska I, Croll Dowgray M, Dowle EJ, Duntsch L, Galla SJ, Howell L, Magid M, Rayne A, Verry AJF, Wold JR, Steeves TE. 2022. Current applications and future promise of genetic/genomic data for conservation in an Aotearoa New Zealand context. <em>Science for Conservation</em>. <a href="https://www.doc.govt.nz/about-us/science-publications/series/science-for-conservation/">[LINK]</a> <a href="https://www.doc.govt.nz/globalassets/documents/science-and-technical/sfc337entire.pdf">[PDF]</a></p>
 	
-####
+<p><strong>Forsdick NJ</strong>, Martini D, Brown L, Maloney RJ, Steeves TE, Knapp M. 2021. Genomic sequencing confirms absence of introgression despite past hybridisation between a common and a critically endangered bird. <em>Global Ecology and Conservation</em>. <a href="https://doi.org/10.1016/j.gecco.2021.e01681">[LINK]</a></p>
 
-<p><strong>Forsdick NJ</strong>, Martini D, Brown L, Maloney RJ, Steeves TE, Knapp M. Genomic sequencing confirms absence of introgression despite past hybridisation between a common and a critically endangered bird. <em>Global Ecology and Conservation</em>. <a href="https://doi.org/10.1016/j.gecco.2021.e01681">[LINK]</a></p>
+<p><strong>Forsdick NJ</strong>, Cubrinovska I, Massaro M, Hale ML. 2021. Microsatellite genotyping detects extra-pair paternity in the Chatham Island black robin, a highly inbred, socially monogamous passerine. <em>Emu -- Austral Ornithology</em>. <a href="https://doi.org/10.1080/01584197.2020.1812406">[LINK]</a></p> 
 
-####
+<p>Jarvis RM, Borrelle SB, <strong>Forsdick NJ</strong>, Perez-Hammerle KV, Dubois NS, Griffin S, Recalde-Salas A, Buschke F, Rose DC, Archibald CL, Gallo J, Mair L, Kadykalo AN, Shanahan D, Prohaska BK. 2021. Navigating spaces between conservation research and practice: are we making progress? <em>Ecological Solutions and Evidence</em> 1:e12028. <a href="https://doi.org/10.1002/2688-8319.12028">[LINK]</a></p>
 
-<p><strong>Forsdick NJ</strong>, Cubrinovska I, Massaro M, Hale ML. Microsatellite genotyping detects extra-pair paternity in the Chatham Island black robin, a highly inbred, socially monogamous passerine. <em>Emu -- Austral Ornithology</em>. <a href="https://doi.org/10.1080/01584197.2020.1812406">[LINK]</a></p> 
+<p>Galla SJ*, <strong>Forsdick NJ</strong>*, Brown L, Hoeppner MP, Knapp M, Maloney RF, Moraga R, Santure AW, Steeves TE. 2019. Reference genomes from distantly related species can be used for discovery of single nucleotide polymorphisms to inform conservation management. <em>Genes</em> 10: 1. <a href="https://doi.org/10.3390/genes10010009">[LINK]</a> *Co-first authors.</p> 
 
-####
+<p><strong>Forsdick NJ</strong>, Cubrinovska I, Massaro M, Hale ML. 2017. Genetic diversity and population differentiation within and between island populations of two sympatric <em>Petroica</em> robins, the Chatham Island black robin and tomtit. <em>Conservation Genetics</em> 18: 275-285. <a href="https://link.springer.com/article/10.1007/s10592-016-0899-1">[LINK]</a></p>
 
-<p>Jarvis RM, Borrelle SB, <strong>Forsdick NJ</strong>, Perez-Hammerle KV, Dubois NS, Griffin S, Recalde-Salas A, Buschke F, Rose DC, Archibald CL, Gallo J, Mair L, Kadykalo AN, Shanahan D, Prohaska BK. Navigating spaces between conservation research and practice: are we making progress? <em>Ecological Solutions and Evidence</em> 1:e12028. <a href="https://doi.org/10.1002/2688-8319.12028">[LINK]</a></p>
-
-####
-
-<p>Galla SJ*, <strong>Forsdick NJ</strong>*, Brown L, Hoeppner MP, Knapp M, Maloney RF, Moraga R, Santure AW, Steeves TE. Reference genomes from distantly related species can be used for discovery of single nucleotide polymorphisms to inform conservation management. <em>Genes</em> 10: 1. <a href="https://doi.org/10.3390/genes10010009">[LINK]</a> *Co-first authors.</p> 
-
-####
-
-<p><strong>Forsdick NJ</strong>, Cubrinovska I, Massaro M, Hale ML. Genetic diversity and population differentiation within and between island populations of two sympatric <em>Petroica</em> robins, the Chatham Island black robin and tomtit. <em>Conservation Genetics</em> 18: 275-285. <a href="https://link.springer.com/article/10.1007/s10592-016-0899-1">[LINK]</a></p>
-
-####
-
-<p>Almojil D, Arias MC, Beasley RR, Chen Y, Clark RW, Dong Y, Dong Z, <strong>Forsdick NJ</strong>, <em>et al</em>. Microsatellite records for volume 8, issue 2. <em>Conservation Genetics Resources</em> 8: 169-196. <a href="https://link.springer.com/article/10.1007/s12686-016-0549-4">[LINK]</a></p>
+<p>Almojil D, Arias MC, Beasley RR, Chen Y, Clark RW, Dong Y, Dong Z, <strong>Forsdick NJ</strong>, <em>et al</em>. 2016. Microsatellite records for volume 8, issue 2. <em>Conservation Genetics Resources</em> 8: 169-196. <a href="https://link.springer.com/article/10.1007/s12686-016-0549-4">[LINK]</a></p>
