--- a/_includes/other-published.html
+++ b/_includes/other-published.html
@@ -2,6 +2,6 @@
 
 <p>Parker KA, Ewen JG, Weiser EL, Rayne A, Steeves TE, Seddon PJ, Innes J, Adams L, <strong>Forsdick NJ</strong>, Jamieson IG, Maitland M, Makan T, Martini D, Parlato E, Richardson K, Stone Z, Armstrong DP. Contemporary conservation translocations are foundational to Predator-Free aspirations in Aotearoa New Zealand: a review. In review, <em>New Zealand Journal of Ecology</em>. <a href="https://doi.org/10.32942/osf.io/bdaxh">[Preprint]</a></p>
 
-<p><strong>Forsdick NJ</strong> & Kelly M. 2017. Kakī reared and sampled. <em>Junctures</em> 18: 58-64. <a href="https://junctures.org/index.php/junctures/article/view/264/508">[LINK]</a></p>
+<p><strong>Forsdick NJ</strong>, Kelly M. 2017. Kakī reared and sampled. <em>Junctures</em> 18: 58-64. <a href="https://junctures.org/index.php/junctures/article/view/264/508">[LINK]</a></p>
 
-<p>Wilkinson M & <strong>Forsdick NJ</strong>. 2017 A conglomeration of stilts. <em>Junctures</em> 18: 35-40.  <a href="https://junctures.org/index.php/junctures/article/view/260/482">[LINK]</a></p>
+<p>Wilkinson M, <strong>Forsdick NJ</strong>. 2017 A conglomeration of stilts. <em>Junctures</em> 18: 35-40.  <a href="https://junctures.org/index.php/junctures/article/view/260/482">[LINK]</a></p>
