--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -8,6 +8,6 @@
 
 <p>Chatham Island Black Robin. <em>Women Birders (Happy Hour)</em> podcast interview with Hannah Buschert, 2021. <a href="https://podcasts.apple.com/us/podcast/women-birders-happy-hour/id1513251211?i=1000529668325">[LINK]</a></p>
 
-<p>Wading into conservation genomics for kakī. British Ornithological Union 2017 Twitter Conference (#BOU17TC) presentation. <a href="https://twitter.com/NatForsdick/status/935720171817316352?s=20">[LINK]</a></p>
+<p>Wading into conservation genomics for kakī. British Ornithological Union 2017 Twitter Conference presentation. <a href="https://twitter.com/NatForsdick/status/935720171817316352?s=20">[LINK]</a></p>
 
 <p>Avian promiscuity. Otago Access Radio <em>Science Notes</em> interview. <a href="https://sciencenotesotago.wordpress.com/2017/08/18/avian-promiscuity/">[LINK]</a></p>
