--- a/_layouts/hello-default.html
+++ b/_layouts/hello-default.html
@@ -111,7 +111,7 @@
 
               <section class="special container" style="margin-bottom:10em">
 
-                  <div style="padding: 0 1em; text-align:center"> 
+                  <div style="padding: 0 1em; text-align:left"> 
                     {{ content }}</div>
       
                   <!-- button -->
