--- a/_layouts/hello-default.html
+++ b/_layouts/hello-default.html
@@ -94,7 +94,7 @@
         <div class="inner">
 
             <h2 style="font-size:3em; text-transform:none">{{ page.banner_title }}</h2>
-      
+      	    <h2 style="font-size:2em; text-transform:none">{{ page.banner_subtitle }}</h2>
         </div>
 
     </section>
