--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ custom styles adapted from Twenty by HTML5 Up
 
 @import url("font-awesome.min.css");
 @import url("academicons.min.css");
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
+@import url("https://fonts.googleapis.com/css?family=Arial:300,400,900");
 
 /* Basic */
 
@@ -28,7 +28,7 @@ custom styles adapted from Twenty by HTML5 Up
 
 	body, input, select, textarea {
 		color: #7c8081;
-		font-family: 'Lato', sans-serif;
+		font-family: 'Arial', sans-serif;
 		font-size: 15pt;
 		font-weight: 300;
 		letter-spacing: 0.025em;
